--- a/Aula02/primeiro-projeto-reactnative/package.json
+++ b/Aula02/primeiro-projeto-reactnative/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aula",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
